--- a/wyyx/package.json
+++ b/wyyx/package.json
@@ -14,7 +14,9 @@
     "fastclick": "^1.0.6",
     "lodash": "^4.17.15",
     "register-service-worker": "^1.7.1",
+    "swiper": "^5.4.5",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
