--- a/wyyx/package.json
+++ b/wyyx/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "fastclick": "^1.0.6",
+    "jsonp": "^0.2.1",
     "lodash": "^4.17.15",
     "register-service-worker": "^1.7.1",
     "swiper": "^5.4.5",
