--- a/wyyx/package.json
+++ b/wyyx/package.json
@@ -15,6 +15,7 @@
     "fastclick": "^1.0.6",
     "jsonp": "^0.2.1",
     "lodash": "^4.17.15",
+    "pinyin": "^2.9.1",
     "register-service-worker": "^1.7.1",
     "swiper": "^5.4.5",
     "vue": "^2.6.11",
