--- a/wyyx/package.json
+++ b/wyyx/package.json
@@ -18,6 +18,7 @@
     "pinyin": "^2.9.1",
     "register-service-worker": "^1.7.1",
     "swiper": "^5.4.5",
+    "vconsole": "^3.3.4",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-lazyload": "^1.3.3",
